Fix body styles: Remove overflow hidden to allow scrolling

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -75,7 +75,7 @@ body {
     background: var(--black);
     color: var(--white);
     margin: var(--xl);
-    overflow: hidden;
+
 
 }
 
